[gd_scene load_steps=2 format=3 uid="uid://cj6in7p6vi52j"]

[ext_resource type="Script" uid="uid://bvme46fr0es0y" path="res://rapid_fire.gd" id="2_kl1op"]

[node name="RapidFire" type="Node2D"]
script = ExtResource("2_kl1op")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
